tests/snapshots/state_reconstruction_tests__snapshot_tests__state_at_m2.snap
---
source: tests/state_reconstruction_tests.rs
expression: summary_m2
---
migration_count: 3
reconstructed_table_count: 1
reconstructed_table_names:
  - users
matches_expected: true
